tests/errors/semantics/cannot_use_non_number_for_array_size.odl
main :: () -> void  {
    y := true;
    arr := [y]int;
};